Tar i bruk samme versjon av ktlint som i andre familie-prosjekter